Mô tả công việc đã thay đổi

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </header>
   <main>
     <section class="profile">
-      <img id="avatar" src="./avatar.jpg.jpg" alt="Ảnh đại diện của tôi" width="200" />
+      <img id="avatar" src="./avatar.jpg.jpggit add index.html" alt="Ảnh đại diện của tôi" width="200" />
       <h2>Chào các bạn, mình là Nguyễn Việt Đức</h2>
       <p>Mình 19 tuổi, quê ở Cần Thơ. Hiện tại mình đang là sinh viên năm 1 ngành Công nghệ Thông tin. Mình rất thích khám phá và học hỏi những điều mới trong lĩnh vực lập trình và công nghệ.</p>
     </section>
